# aptos-core

./: Cargo.toml
.github/actions/file-change-determinator/: action.yaml
.github/workflows/: execution-performance.yaml  lint-test.yaml  windows-build.yaml  workflow-run-execution-performance.yaml
aptos-move/aptos-vm/src/: data_cache.rs
aptos-move/aptos-vm/src/move_vm_ext/: resolver.rs  session.rs  vm.rs
aptos-move/framework/aptos-framework/sources/: event.move
aptos-move/framework/src/: extended_checks.rs
aptos-move/framework/src/natives/: event.rs  string_utils.rs
config/src/config/: mempool_config.rs  state_sync_config.rs
consensus/src/dag/: dag_driver.rs  reliable_broadcast.rs  types.rs
consensus/src/dag/tests/: reliable_broadcast_tests.rs
crates/aptos/: Cargo.toml
crates/aptos-move-graphql/scalars/: Cargo.toml
crates/aptos-move-graphql/scalars/src/: lib.rs
crates/aptos-move-graphql/schema/: Cargo.toml
crates/aptos-move-graphql/schema/src/: parse.rs
crates/aptos-move-graphql/values/: Cargo.toml
crates/aptos/src/move_tool/: mod.rs
developer-docs-site/docs/move/move-on-aptos/: cryptography.md
ecosystem/python/sdk/aptos_sdk/: gen.py
ecosystem/typescript/sdk/: CHANGELOG.md
ecosystem/typescript/sdk/src/: index.ts
execution/executor-benchmark/src/: native_executor.rs
execution/executor/src/mock_vm/: mod.rs
state-sync/inter-component/event-notifications/src/: tests.rs
storage/aptosdb/src/: lib.rs  state_merkle_db.rs
storage/aptosdb/src/event_store/: mod.rs  test.rs
testsuite/forge-cli/src/: main.rs
testsuite/testcases/src/: lib.rs  load_vs_perf_benchmark.rs
types/src/: contract_event.rs  proptest_types.rs
(+17 files in other folders)
